// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rebalancer Rebalancing logic rebalances ASSET when source has 5% more than destination 1`] = `
Object {
  "amountMoved": "2625000000000000000",
  "operation": "Rebalance ASSET (5% imbalance)",
  "pool1": Object {
    "after": Object {
      "asset": "102375000000000000000",
      "usdc": "105087937500000000000",
    },
    "before": Object {
      "asset": "105000000000000000000",
      "usdc": "105087937500000000000",
    },
  },
  "pool2": Object {
    "after": Object {
      "asset": "102625000000000000000",
      "usdc": "105344562500000000000",
    },
    "before": Object {
      "asset": "100000000000000000000",
      "usdc": "105344562500000000000",
    },
  },
  "tokenType": "ASSET",
}
`;

exports[`Rebalancer Rebalancing logic rebalances USDC when source has 5% more than destination 1`] = `
Object {
  "amountMoved": "2694562500000000000",
  "operation": "Rebalance USDC (5% imbalance)",
  "pool1": Object {
    "after": Object {
      "asset": "100000000000000000000",
      "usdc": "105087937500000000000",
    },
    "before": Object {
      "asset": "100000000000000000000",
      "usdc": "107782500000000000000",
    },
  },
  "pool2": Object {
    "after": Object {
      "asset": "100000000000000000000",
      "usdc": "105344562500000000000",
    },
    "before": Object {
      "asset": "100000000000000000000",
      "usdc": "102650000000000000000",
    },
  },
  "tokenType": "USDC",
}
`;

exports[`Rebalancer Rebalancing logic rebalances when source has more than 5% more 1`] = `
Object {
  "amountMoved": "3087883753222656250",
  "operation": "Rebalance USDC (10% imbalance)",
  "pool1": Object {
    "after": Object {
      "asset": "102375000000000000000",
      "usdc": "120427466375683593750",
    },
    "before": Object {
      "asset": "102375000000000000000",
      "usdc": "123515350128906250000",
    },
  },
  "pool2": Object {
    "after": Object {
      "asset": "102625000000000000000",
      "usdc": "111197741018847656250",
    },
    "before": Object {
      "asset": "102625000000000000000",
      "usdc": "108109857265625000000",
    },
  },
  "tokenType": "USDC",
}
`;
